k8s/auth/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: auth
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.0.1
        command: ["/opt/keycloak/bin/kc.sh", "start"]
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "4"
            memory: "4Gi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secret-store
          mountPath: '/mnt/secrets-store'
          readOnly: true
      volumes:
        - name: secret-store
          csi:
            driver: 'secrets-store.csi.k8s.io'
            readOnly: true
            volumeAttributes:
              secretProviderClass: 'keycloak-vault'
